# recruitment-bot

./: LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
docker/: Dockerfile  entrypoint.sh
src/: main.py  messages.py  passenger_wsgi.py  settings.py  strings.py
