[project]
name = "Barbarzyncy Recruitment Bot"
description = "Pani z HR - the Discord bot that helps with recruitment."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Łukasz Żmudziński", email = "lukasz@zmudzinski.me" },
]

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
